--- a/FastFood/app/src/main/AndroidManifest.xml
+++ b/FastFood/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MainHamburger"></activity>
         <activity android:name=".StartSplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +24,7 @@
         <activity android:name=".StartShopping" />
         <activity android:name=".Menuloginfacebook" />
         <activity android:name=".Login" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
